# EnclaveAI--Privacy-Preserving-Intelligence

./: .env.contracts  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  package.json
backend/src/: server.js
circuits/: Nargo.toml  Prover.toml
circuits/proofs/: inference_verify.proof
circuits/src/: main.nr
contracts/auranode-pool/: Cargo.toml
contracts/auranode-pool/src/: lib.rs
contracts/auranode-pool/test_snapshots/tests/: test_register_and_submit.1.json  test_slash_on_failure.1.json
contracts/auranode-verifier/: Cargo.toml
contracts/auranode-verifier/src/: lib.rs
contracts/auranode-verifier/test_snapshots/tests/: test_initialize_and_set_vk.1.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .env.example  next.config.js  next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/app/validators/: page.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/hooks/: use-node-pool.ts  use-stellar-wallet.ts  use-tee-connection.ts
node-daemon/: Cargo.toml
node-daemon/src/: main.rs
node-daemon/src/enclave/: mod.rs  secure_run.rs
scripts/: deploy-contracts.sh  deploy.sh  prove.sh  setup.sh
smart-contracts/: Cargo.toml  package.json
smart-contracts/scripts/: deploy.js
smart-contracts/src/: enclave_contract.rs  lib.rs
smart-contracts/test_snapshots/enclave_contract/tests/: test_register_and_submit.1.json
tests/integration/: api.test.js
