[workspace]
resolver = "2"
members = [
    "contracts/auranode-pool",
    "contracts/auranode-verifier",
    "node-daemon",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
