[package]
name = "node-daemon"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "node-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
